refactor: represent download failure reasons as a closed enum
DownloadStateMachine.Terminal carried its failure reason as free-form
prose (five ad-hoc String constants). Replace it with DownloadFailureCode
so the set is closed and typed end to end, and store the enum's name
rather than its prose in failure_reason - the wording becomes a
presentation concern for whoever reads that column, not a decision
baked into the write path.