@@ -23,12 +23,6 @@ import java.util.List;
 @Component
 public class DownloadStateMachine {
 
-    public static final String SEARCH_FAILED = "Searching for downloads failed";
-    public static final String NO_CANDIDATES = "No download candidates found";
-    public static final String SOURCES_EXHAUSTED = "All download sources exhausted";
-    public static final String TIMED_OUT = "timed out";
-    public static final String TRANSFER_NOT_FOUND = "slskd has no record of this transfer";
-
     private final Duration searchPollInterval;
     private final Duration downloadPollInterval;
     private final Duration searchBudget;
@@ -53,7 +47,8 @@ public class DownloadStateMachine {
 
     public DownloadDecision afterSearchInit(DownloadTask task, SearchState started, Instant now) {
         if (started == null || started.getId() == null || started.getId().isBlank()) {
-            return new DownloadDecision.Terminal(DownloadStatus.FAILED, SEARCH_FAILED);
+            return new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                    DownloadFailureCode.SEARCH_FAILED);
         }
         DownloadTask next = task.withPhase(DownloadPhase.SEARCH_POLL, now);
         return new DownloadDecision.Advance(new DownloadTask(next.downloadId(), next.songName(),
@@ -65,15 +60,17 @@ public class DownloadStateMachine {
     public DownloadDecision afterSearchPoll(DownloadTask task, SearchState state,
                                             List<DownloadCandidate> selected, Instant now) {
         if (state != null && SlskdSearchState.isFailure(state.getState())) {
-            return new DownloadDecision.Terminal(DownloadStatus.FAILED, SEARCH_FAILED);
+            return new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                    DownloadFailureCode.SEARCH_FAILED);
         }
         if (state == null || !Boolean.TRUE.equals(state.getIsComplete())) {
             return task.isPastBudget(now, searchBudget)
-                    ? new DownloadDecision.Terminal(DownloadStatus.FAILED, TIMED_OUT)
+                    ? new DownloadDecision.Terminal(DownloadStatus.FAILED, DownloadFailureCode.TIMED_OUT)
                     : new DownloadDecision.Continue(task.dueAt(now.plus(searchPollInterval)));
         }
         if (selected == null || selected.isEmpty()) {
-            return new DownloadDecision.Terminal(DownloadStatus.FAILED, NO_CANDIDATES);
+            return new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                    DownloadFailureCode.NO_CANDIDATES);
         }
         DownloadTask next = task.withPhase(DownloadPhase.DOWNLOAD_INIT, now);
         return new DownloadDecision.Advance(new DownloadTask(next.downloadId(), next.songName(),
@@ -109,13 +106,14 @@ public class DownloadStateMachine {
             // moved a byte. A short grace window absorbs the gap between enqueueing and the transfer
             // appearing in the list; past that, stop polling and say so.
             return task.isPastBudget(now, missingTransferGrace)
-                    ? new DownloadDecision.Terminal(DownloadStatus.FAILED, TRANSFER_NOT_FOUND)
+                    ? new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                            DownloadFailureCode.TRANSFER_NOT_FOUND)
                     : new DownloadDecision.Continue(task.dueAt(now.plus(downloadPollInterval)));
         }
         // Genuinely still transferring: the only branch with a percentComplete worth reading.
         DownloadTask observed = task.withProgress(toProgress(file.getPercentComplete()));
         return observed.isPastBudget(now, downloadBudget)
-                ? new DownloadDecision.Terminal(DownloadStatus.FAILED, TIMED_OUT)
+                ? new DownloadDecision.Terminal(DownloadStatus.FAILED, DownloadFailureCode.TIMED_OUT)
                 : new DownloadDecision.Continue(observed.dueAt(now.plus(downloadPollInterval)));
     }
 
@@ -128,14 +126,15 @@ public class DownloadStateMachine {
         if (percentComplete == null || percentComplete.isNaN() || percentComplete.isInfinite()) {
             return null;
         }
-        double clamped = Math.max(0d, Math.min(100d, percentComplete.doubleValue()));
+        double clamped = Math.clamp(percentComplete.doubleValue(), 0d, 100d);
         return BigDecimal.valueOf(clamped).setScale(2, RoundingMode.HALF_UP);
     }
 
     public DownloadDecision onCallFailed(DownloadTask task, Throwable error, Instant now) {
         return switch (task.phase()) {
             case SEARCH_INIT, SEARCH_POLL ->
-                    new DownloadDecision.Terminal(DownloadStatus.FAILED, SEARCH_FAILED);
+                    new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                            DownloadFailureCode.SEARCH_FAILED);
             case DOWNLOAD_INIT, DOWNLOAD_POLL -> retryOrAdvanceCandidate(task, now);
         };
     }
@@ -153,7 +152,8 @@ public class DownloadStateMachine {
         if (task.candidateIndex() + 1 < task.candidates().size()) {
             return new DownloadDecision.Continue(rebuild(base, task.candidateIndex() + 1, 0));
         }
-        return new DownloadDecision.Terminal(DownloadStatus.FAILED, SOURCES_EXHAUSTED);
+        return new DownloadDecision.Terminal(DownloadStatus.FAILED,
+                DownloadFailureCode.SOURCES_EXHAUSTED);
     }
 
     private DownloadTask rebuild(DownloadTask base, int candidateIndex, int retryIndex) {
